--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
 services:
   gateway:
-    build: ./apps/gateway
+    build:
+      context: .
+      dockerfile: apps/gateway/Dockerfile
     ports:
       - "3000:3000"
+    environment:
+      - AUTH_SERVER_URL=http://auth:3001
+      - EVENT_SERVER_URL=http://event:3002
     depends_on:
       - auth
       # - event
