--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - EVENT_SERVER_URL=http://event:3002
     depends_on:
       - auth
-      # - event
+      - event
 
   auth:
     build:
@@ -32,24 +32,24 @@ services:
     volumes:
       - auth-db-data:/data/db
 
-  # event:
-  #   build: ./apps/event
-  #   ports:
-  #     - "3002:3002"
-  #   environment:
-  #     - MONGO_URI=mongodb://event-db:27017/event
-  #   depends_on:
-  #     - event-db
+  event:
+    build: ./apps/event
+    ports:
+      - "3002:3002"
+    environment:
+      - MONGO_URI=mongodb://event-db:27017/event
+    depends_on:
+      - event-db
 
-  # event-db:
-  #   image: mongo
-  #   container_name: event-db
-  #   restart: always
-  #   ports:
-  #     - "27018:27017"
-  #   volumes:
-  #     - event-db-data:/data/db
+  event-db:
+    image: mongo
+    container_name: event-db
+    restart: always
+    ports:
+      - "27018:27017"
+    volumes:
+      - event-db-data:/data/db
 
 volumes:
   auth-db-data:
-  # event-db-data:
+  event-db-data:
